--- a/src/app/video/video-list/video-list.component.html
+++ b/src/app/video/video-list/video-list.component.html
@@ -1,8 +1,13 @@
-<ul>
-  <li *ngFor="let repo of repos | async">
-    <strong> {{repo.name}} </strong>
-    <p> {{repo.description }}</p>
-
-    <a [routerLink]= "['detail/', repo.name]">Detalhes</a>
-  </li>
-</ul>
+<div class="nfc">
+  <ul>
+    <li *ngFor="let repo of repos | async">
+      <p>titulo: </p>
+      <strong> {{ repo.name }} </strong>
+      <p>descrição: </p>
+      <p>{{ repo.description }}</p>
+      <p>Link:</p>
+      <a [routerLink]="['detail/', repo.name]">Detalhes</a>
+      <p></p>
+    </li>
+  </ul>
+</div>
